# cidacsrl

./: .dockerignore  .gitignore  Makefile  README.md  cli.py  docker-compose.dev.yml  mkdocs.yml  pyproject.toml
cidacsrl/: cli.py
cidacsrl/tests/integration/: test_bootstrapper_use_case_integration.py  test_indexing_bootstrapper_integration.py  test_linkage_adapters_integration.py  test_spark_data_ingestion_adapter.py  test_spark_data_persistence_adapter.py  test_spark_data_transformation_adapter.py  test_spark_es_indexing_adapter.py  test_spark_es_indexing_adapter_integration.py  test_spark_es_search_adapter.py  test_spark_scoring_adapter.py
cidacsrl_rlp/: cli.py  comando_python.sh  docker-compose.yml
cidacsrl_rlp/cidacsrl/configs/: linkage.yaml
cidacsrl_rlp/docker/: Dockerfile
cidacsrl_rlp/shared/infra/: config_loader.py
cidacsrl_rlp/src/: config-es.yml  config-spark.yml  config-workflow.yml
cidacsrl_rlp/src/config/: loader.py
cidacsrl_rlp/src/deduplicate/: find_connected_components.py
cidacsrl_rlp/src/es/: client.py  indexer.py  indexing_operations.py  mapping_models.py  query_builder.py
cidacsrl_rlp/src/linkage/: cidacsrl.py  models.py  rdd_processing.py  scoring_engine.py  similarity_functions.py
cidacsrl_rlp/src/utils/: dataframe_utils.py  io_manager.py  log.py  logging_config.py  schema_helpers.py  spark_utils.py  utils.py
cidacsrl_rlp/src/workflows/: cleaning_workflow.py  deduplicate_workflow.py  elasticsearch_indexing_workflow.py  sequential_linkage_workflow.py
cidacsrl_rlp/tests/: conftest.py
cidacsrl_rlp/tests/configs/: env_local.yml
cidacsrl_rlp/tests/e2e/: run_e2e_pipeline.py
cidacsrl_rlp/tests/enviroment/: docker-compose.yml
cidacsrl_rlp/tests/es/: test_query_builder.py
cidacsrl_rlp/tests/integration/: test_bootstrapper_use_case_integration.py  test_indexing_bootstrapper_integration.py  test_linkage_adapters_integration.py  test_run_sequential_linkage_integration.py  test_spark_data_ingestion_adapter.py  test_spark_data_persistence_adapter.py  test_spark_data_transformation_adapter.py  test_spark_es_indexing_adapter.py  test_spark_es_indexing_adapter_integration.py  test_spark_es_search_adapter.py  test_spark_scoring_adapter.py
cidacsrl_rlp/tests/linkage/: test_scoring_engine.py  test_similarity_functions.py
cleaning/application/use_cases/: cleaning_workflow.py
core/: cli.py
core/application/services/: work_unit_orchestrator.py
core/application/use_cases/: index_dataset_use_case.py  record_linkage_use_case.py  run_sequential_linkage.py
core/docker/: Dockerfile
core/domain/models/: linkage_specification.py  matching_rules.py
core/domain/services/: scoring_engine.py  similarity_functions.py
core/infra/bootstrappers/: indexing_bootstrapper.py  linkage_bootstrapper.py
core/infra/configs/: loader.py  logging_config.py
core/infra/elasticsearch/: indexer.py  indexing_operations.py
core/infra/spark/: spark_factory.py
core/tests/: conftest.py
core/tests/configs/: env_local.yml  linkage_acidentes_obitos_env.yml  linkage_internacao_nascimentos.yml
core/tests/e2e/: generate_e2e_data_acidentes.py  run_e2e_pipeline.py
core/tests/enviroment/: docker-compose.yml
core/tests/integration/: conftest.py  test_bootstrapper_use_case_integration.py  test_indexing_bootstrapper_integration.py  test_linkage_adapters_integration.py  test_spark_data_ingestion_adapter.py  test_spark_data_persistence_adapter.py  test_spark_data_transformation_adapter.py  test_spark_es_indexing_adapter.py  test_spark_es_indexing_adapter_integration.py  test_spark_es_search_adapter.py  test_spark_scoring_adapter.py
deduplicating/application/use_cases/: deduplicate_use_case.py
deduplicating/infra/bootstrappers/: deduplicate_bootstrapper.py
deduplicating/infra/configs/: loader.py
deduplicating/tests/: conftest.py
deduplicating/tests/configs/: deduplicate_acidentes_obitos_env.yml
deduplicating/tests/e2e/: run_e2e_deduplication.py
deploy/hpc/: Dockerfile
docs/: index.md
docs/adr/: adr-001-arquitetura-hexagonal.md  adr-002-isolamento-infraestrutura.md  adr-002-transicao-workflow-use-case.md  adr-003-transicao-workflow-use-case.md  adr-003-work-units.md  adr-004-telemetria.md  adr-004-work-units.md  adr-005-documentacao-arquitetural.md  adr-005-telemetria.md  adr-006-documentacao-arquitetural.md  adr-006-reorganizacao-layer-feature.md  adr-007-bootstrap-sem-container-di.md  adr-007-reorganizacao-layer-feature.md  adr-008-bootstrap-sem-container-di.md  adr-008-salvamento-incremental-por-fase.md  adr-009-cli-unica-instalavel.md  adr-009-layout-particionamento-phase-match.md  adr-010-cli-unica-instalavel.md  adr-010-indexed-dataset-filter.md  adr-010-layout-particionamento-phase-match.md  adr-011-cli-unica-instalavel.md  adr-011-indexed-dataset-filter.md
docs/architecture/: execution-flows.md  overview.md
docs/reference/: cleaning_workflow.md  column_cleaner.md  elasticsearch_indexing_workflow.md  indexing_operations.md  loader.md  sequential_linkage_workflow.md
docs/user-guide/: cleaning.md  cluster_execution.md  deduplicate.md  elasticsearch_indexing.md  linkage.md
tests/: conftest.py
tests/environment/: Dockerfile  docker-compose.yml
tests/integration/: test_bootstrapper_use_case_integration.py  test_indexing_bootstrapper_integration.py  test_linkage_adapters_integration.py
(+320 files in other folders)
