[project]
name = "cidacsrl-rlp"
version = "0.1.0"
description = ""
authors = [
    { name = "Rafael Romão", email = "leafaromao@gmail.com" }
]
maintainers = [
  { name = "Rafael Romão", email = "leafaromao@gmail.com" },
]

keywords = ["record linkage", "cidacsrl", "pyspark", "elasticsearch"]

readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch>=9.1.0",
    "pyyaml>=6.0.2",
    "jellyfish>=1.1.03",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[tool.isort]
profile = "black"
line_length = 79
known_third_party = ["elasticsearch", "pyspark", "jellyfish", "blue"]
default_section = "THIRDPARTY"
skip = ["tests"]

[tool.setuptools.packages.find]
include = ["cidacsrl_rlp*"]
exclude = ["spark_packages*"]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
elasticsearch = "^9.1.0"
pyspark = "^3.4.0"
jellyfish = "^1.2.0"
blue = "^0.9.1"
isort = "^6.0.1"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.6.15"
mkdocstrings = "^0.29.1"
mkdocstrings-python = "^1.16.12"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
"Documentação" = "https://github.com/rafael-romao/cidacsrl-rlp/docs"
"Código" = "https://github.com/rafael-romao/cidacsrl-rlp"
"Bug Tracker" = "https://github.com/rafael-romao/cidacsrl-rlp/issues"
