[project]
name = "cidacsrl"
version = "3.1.0a1"
description = "CIDACS-RL Record Linkage Engine"
authors = [
    { name = "Rafael Romão", email = "leafaromao@gmail.com" }
]
maintainers = [
  { name = "Rafael Romão", email = "leafaromao@gmail.com" },
]
keywords = ["record linkage", "cidacsrl", "pyspark", "elasticsearch"]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "elasticsearch>=9.1.0",
    "pyyaml>=6.0.2",
    "jellyfish>=1.1.03",
    "pandas>=1.3.0",
    "pyspark>=3.4.0",
    "graphframes"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
"Documentação" = "https://github.com/rafael-romao/cidacsrl/docs"
"Código" = "https://github.com/rafael-romao/cidacsrl"
"Bug Tracker" = "https://github.com/rafael-romao/cidacsrl/issues"

[project.scripts]
cidacsrl = "cidacsrl.adapters.inbound.cli:main"

[tool.poetry]
requires-poetry = ">=2.0.0"
packages = [
    { include = "cidacsrl", from = "src" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
blue = "^0.9.1"
isort = "^6.0.1"
testcontainers = "^4.0.0"
ipykernel = "^6.29.4"
faker = "^40.23.0"
pyarrow = "^24.0.0"
matplotlib = "^3.11.0"
setuptools = "^82.0.1"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.6.15"
mkdocstrings = "^0.29.1"
mkdocstrings-python = "^1.16.12"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79
known_third_party = ["elasticsearch", "pyspark", "jellyfish", "blue"]
default_section = "THIRDPARTY"
skip = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Testes unitarios de logica pura e dominio.",
    "integration: Testes de integracao que dependem de Spark ou ES(Docker).",
    "e2e: Testes ponta a ponta do pipeline completo de linkage."
]